# EytionPlusPlus

./: CMakeLists.txt  CMakelists.txt  License  README.md  epp.cpp  grammar.txt
.github/workflows/: buildLinux.yml  buildWindows.yml  epp_build.yml
eppForVscode/: epp-0.0.1.vsix  epp-1.5.0.vsix  package-lock.json  package.json
eppForVscode/snippets/: snippets.json
eppForVscode/syntaxes/: epp.tmLanguage.json
eppVscode/epp/: CHANGELOG.md  README.md  epp-1.0.0.vsix  epp-2.5.0.vsix  package.json  vsc-extension-quickstart.md
eppVscode/epp/syntaxes/: epp.tmLanguage.json
eppack/calc/: calc.cpp  calc.h  calcvisitor.cpp  calcvisitor.h
eppack/error/: epperr.cpp  epperr.h
eppack/excphg/: excphg.cpp  excphg.h
eppack/function/: func.h
eppack/global/: elib.cpp  elib.h
eppack/tools/: configloader.cpp  configloader.h
eppack/var/: var.cpp  var.h
lexer/: eplex.cpp  eplex.h
parser/: README.md  east.cpp  east.h  parser.cpp  parser.h
